# fedisched

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: auth.py  config.py  database.py  encryption.py  main.py  models.py  scheduler.py
app/api/: accounts.py  auth.py  health.py  posts.py
frontend/: index.html
frontend/src/: App.svelte  app.css
frontend/src/components/: Accounts.svelte  Composer.svelte  Login.svelte  Navigation.svelte  Queue.svelte  Setup.svelte
tests/: conftest.py  test_auth.py  test_bluesky.py  test_health.py  test_mastodon.py
